[package]
name = "PLAY-DATE-MIX"
version = "0.1.0"
edition = "2021"

[dependencies]
human-sort         = { git = "https://github.com/dragazo/human-sort",  package = "human-sort"}
human-sort-patched = { git = "https://github.com/luxter77/human-sort", package = "human-sort"}
rand = "0.8.5"

[[bin]]
name = "FiniteTimeAtRuntime"
path = "src/finite_size_at_runtime.rs"

[[bin]]
name = "Full-Cycle"
path = "src/full-cycle.rs"

[[bin]]
name = "IPu32"
path = "src/ip_u32.rs"

[[bin]]
name = "LCG"
path = "src/LCG.rs"

[[bin]]
name = "Refs"
path = "src/refs.rs"

[[bin]]
name = "unsortable"
path = "src/unsortable.rs"

[[bin]]
name = "usize"
path = "src/usize.rs"
